{
  "version": 4,
  "terraform_version": "0.14.10",
  "serial": 384,
  "lineage": "d0699339-8e96-3192-dbf2-3a81f9a9893f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0eb9c3d4a1f2f6bf8",
            "arn": "arn:aws:ec2:us-west-1:706924219932:instance/i-09df5118ccef5ea97",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0efac787953680a06",
                "volume_size": 5,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "saleschamp_profile",
            "id": "i-09df5118ccef5ea97",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08d3df2d2f7f3b22d",
            "private_dns": "ip-10-0-101-117.us-west-1.compute.internal",
            "private_ip": "10.0.101.117",
            "public_ip": "52.53.155.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bcae7ba6e65387f9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0650a313c3d80f0f6",
            "tags": {
              "DeployName": "main-instances",
              "Name": "saleschamp-vm-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-053d8cabf1fc857e6",
              "sg-0bf0c05206e473cc4"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.saleschamp_profile",
            "aws_iam_role.saleschamp-iam",
            "aws_key_pair.deployer",
            "aws_security_group.back-security",
            "aws_security_group.front-security",
            "data.aws_iam_policy_document.saleschamp",
            "data.template_file.user_data",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0eb9c3d4a1f2f6bf8",
            "arn": "arn:aws:ec2:us-west-1:706924219932:instance/i-0f1030c6b027200ba",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-069d57242f11175bb",
                "volume_size": 5,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "saleschamp_profile",
            "id": "i-0f1030c6b027200ba",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-014f2b1e59a8096d6",
            "private_dns": "ip-10-0-102-93.us-west-1.compute.internal",
            "private_ip": "10.0.102.93",
            "public_ip": "54.67.78.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-073a2c11793f6581b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a9a0088db618a606",
            "tags": {
              "DeployName": "main-instances",
              "Name": "saleschamp-vm-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-053d8cabf1fc857e6",
              "sg-0bf0c05206e473cc4"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.saleschamp_profile",
            "aws_iam_role.saleschamp-iam",
            "aws_key_pair.deployer",
            "aws_security_group.back-security",
            "aws_security_group.front-security",
            "data.aws_iam_policy_document.saleschamp",
            "data.template_file.user_data",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "saleschamp-applb-logs",
                "enabled": true,
                "prefix": "alb"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:706924219932:loadbalancer/app/saleschamp-alb/264e47fa23061e2e",
            "arn_suffix": "app/saleschamp-alb/264e47fa23061e2e",
            "dns_name": "saleschamp-alb-24432375.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-1:706924219932:loadbalancer/app/saleschamp-alb/264e47fa23061e2e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "saleschamp-alb",
            "security_groups": [
              "sg-0bf0c05206e473cc4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0650a313c3d80f0f6"
              },
              {
                "subnet_id": "subnet-0a9a0088db618a606"
              }
            ],
            "subnets": [
              "subnet-0650a313c3d80f0f6",
              "subnet-0a9a0088db618a606"
            ],
            "tags": {
              "Environment": "production"
            },
            "vpc_id": "vpc-04ebb4b0d567806ce",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_s3_bucket.lb_logs",
            "aws_security_group.front-security",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:706924219932:listener/app/saleschamp-alb/264e47fa23061e2e/6d0d9d9053835b7f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:706924219932:targetgroup/saleschamp-http-vpc/65e741c167af77d4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:706924219932:listener/app/saleschamp-alb/264e47fa23061e2e/6d0d9d9053835b7f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:706924219932:loadbalancer/app/saleschamp-alb/264e47fa23061e2e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.saleschamp",
            "aws_s3_bucket.lb_logs",
            "aws_security_group.front-security",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "saleschamp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:706924219932:targetgroup/saleschamp-http-vpc/65e741c167af77d4",
            "arn_suffix": "targetgroup/saleschamp-http-vpc/65e741c167af77d4",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:706924219932:targetgroup/saleschamp-http-vpc/65e741c167af77d4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "saleschamp-http-vpc",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04ebb4b0d567806ce"
          },
          "dependencies": [
            "aws_lb.alb",
            "aws_s3_bucket.lb_logs",
            "aws_security_group.front-security",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "saleschamp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:706924219932:targetgroup/saleschamp-http-vpc/65e741c167af77d4-20210529085304049400000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:706924219932:targetgroup/saleschamp-http-vpc/65e741c167af77d4",
            "target_id": "i-09df5118ccef5ea97"
          },
          "dependencies": [
            "aws_iam_instance_profile.saleschamp_profile",
            "aws_iam_role.saleschamp-iam",
            "aws_instance.web",
            "aws_key_pair.deployer",
            "aws_lb.alb",
            "aws_lb_target_group.saleschamp",
            "aws_s3_bucket.lb_logs",
            "aws_security_group.back-security",
            "aws_security_group.front-security",
            "data.aws_iam_policy_document.saleschamp",
            "data.template_file.user_data",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:706924219932:targetgroup/saleschamp-http-vpc/65e741c167af77d4-20210529085304091300000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:706924219932:targetgroup/saleschamp-http-vpc/65e741c167af77d4",
            "target_id": "i-0f1030c6b027200ba"
          },
          "dependencies": [
            "aws_iam_instance_profile.saleschamp_profile",
            "aws_iam_role.saleschamp-iam",
            "aws_instance.web",
            "aws_key_pair.deployer",
            "aws_lb.alb",
            "aws_lb_target_group.saleschamp",
            "aws_s3_bucket.lb_logs",
            "aws_security_group.back-security",
            "aws_security_group.front-security",
            "data.aws_iam_policy_document.saleschamp",
            "data.template_file.user_data",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "back-security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:706924219932:security-group/sg-053d8cabf1fc857e6",
            "description": "SSH Access to Server",
            "egress": [],
            "id": "sg-053d8cabf1fc857e6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "back-security",
            "name_prefix": "",
            "owner_id": "706924219932",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-04ebb4b0d567806ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "front-security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:706924219932:security-group/sg-0bf0c05206e473cc4",
            "description": "Ingress and Egress traffic allowing http and https traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bf0c05206e473cc4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "front-security",
            "name_prefix": "",
            "owner_id": "706924219932",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-04ebb4b0d567806ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:706924219932:internet-gateway/igw-0f33cd6ca36b09a96",
            "id": "igw-0f33cd6ca36b09a96",
            "owner_id": "706924219932",
            "tags": {
              "Name": "saleschamp-vpc"
            },
            "vpc_id": "vpc-04ebb4b0d567806ce"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f33cd6ca36b09a96",
            "id": "r-rtb-0894213c853c509141080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0894213c853c50914",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0894213c853c50914",
            "owner_id": "706924219932",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f33cd6ca36b09a96",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "saleschamp-vpc-public"
            },
            "vpc_id": "vpc-04ebb4b0d567806ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c40cb8516d1b9b11",
            "route_table_id": "rtb-0894213c853c50914",
            "subnet_id": "subnet-0650a313c3d80f0f6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e38b47600a798a65",
            "route_table_id": "rtb-0894213c853c50914",
            "subnet_id": "subnet-0a9a0088db618a606"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:706924219932:subnet/subnet-0650a313c3d80f0f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0650a313c3d80f0f6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "706924219932",
            "tags": {
              "Name": "saleschamp-vpc-public-us-west-1b"
            },
            "vpc_id": "vpc-04ebb4b0d567806ce"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:706924219932:subnet/subnet-0a9a0088db618a606",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0a9a0088db618a606",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "706924219932",
            "tags": {
              "Name": "saleschamp-vpc-public-us-west-1c"
            },
            "vpc_id": "vpc-04ebb4b0d567806ce"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:706924219932:vpc/vpc-04ebb4b0d567806ce",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cce770b32df389a6",
            "default_route_table_id": "rtb-044c2b164171b33a8",
            "default_security_group_id": "sg-08048494ea818bb97",
            "dhcp_options_id": "dopt-2b54804d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04ebb4b0d567806ce",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-044c2b164171b33a8",
            "owner_id": "706924219932",
            "tags": {
              "Name": "saleschamp-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}